# qbo_angen

./: .gitignore  .gitmodules  README.md
qbo_calibration/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
qbo_calibration/config/: camera_hd.bak  camera_hd.yaml  depth_xtion.yaml  rgb_xtion.yaml  transformation.bak  transformation.bak2  transformation.bak3  transformation.test  transformation.yaml
qbo_calibration/include/: alignment.hpp  alignment.hpp~
qbo_calibration/launch/: alignment.launch  alignment.launch~  xtion.launch  xtion.launch~
qbo_calibration/src/: alignment.cpp  alignment.cpp~
qbo_description/: CMakeLists.txt  package.xml
qbo_description/atoms_description/urdf/: qbo.urdf.xacro  qbo.xacro
qbo_description/rviz_cfg/: config.rviz  config.rviz~
qbo_description/urdf/: qbo.urdf  robot.bak  robot.urdf
qbo_joint_odom/: ANGEN.md  CMakeLists.txt  package.xml
qbo_joint_odom/launch/: joint_odom.launch  joint_odom_with_base_link.launch
qbo_joint_odom/scripts/: qbo_joint_odom.py  qbo_stare.py
qbo_joint_odom/src/: qbo_head_transform.cpp  qbo_xtion_tf.cpp
qbo_laser_slam/launch/: mapping.launch  mapping.launch~
qbo_state_publisher/: CMakeLists.txt  package.xml
qbo_state_publisher/src/: qbo_state_publisher.cpp
