<?xml version="1.0"?>
<package>
  <name>qbo_calibration</name>
  <version>0.0.1</version>
  <description>

     qbo_calibration

  </description>
  <author email="andreas.persson@oru.se">Andreas Persson</author>
  <maintainer email="andreas.persson@oru.se">Andreas Persson</maintainer>
  <license>MIT</license>
  <!-- <url>http://ros.org/wiki/qbo_calibration</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>  
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>

  <export>
  </export>
</package>


