<?xml version="1.0"?>
<package>
  <name>qbo_description</name>
  <version>0.0.1</version>
  <description>

     qbo_description provides a complete 3D model of the QBO Robot for simulation and visualization. 
     The files in this package are parsed and used by a variety of other components. 
     Most users will not interact directly with this package.

  </description>
  <author email="andreas.persson@oru.se">Andreas Persson</author>
  <maintainer email="andreas.persson@oru.se">Andreas Persson</maintainer>
  <license>MIT</license>
  <!--<url>http://ros.org/wiki/qbo_description</url>-->

  <buildtool_depend>catkin</buildtool_depend>

  <!--<build_depend>urdf</build_depend>-->
  <!--<build_depend>xacro</build_depend>-->


</package>


