<?xml version="1.0"?>
<package>
  <name>qbo_state_publisher</name>
  <version>0.0.1</version>
  <description>

     qbo_state_publisher

  </description>
  <author email="andreas.persson@oru.se">Andreas Persson</author>
  <maintainer email="andreas.persson@oru.se">Andreas Persson</maintainer>
  <license>MIT</license>
  <!--<url>http://ros.org/wiki/qbo_state_publisher</url>-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>


